--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "serve": "nuxt serve"
   },
   "dependencies": {
-    "nuxt": "^2.13.0"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.13.0",
+    "sass-loader": "^9.0.2"
   },
   "devDependencies": {}
 }
